--- a/templates/base.html
+++ b/templates/base.html
@@ -10,5 +10,8 @@
     <h2>Welcome to Kyle's Kids</h2>
 
 {% block content %}{% endblock %}
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    {% block js %}{% endblock %}
 </body>
 </html>
