--- a/templates/home.html
+++ b/templates/home.html
@@ -4,4 +4,41 @@
 
     <p>This is the home page</p>
 
+
+    <p>Want to be one of Kyle's Kids?</p>
+    <div id="fb-root"><!-- required for facebook --></div>
+    <fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
+{% endblock %}
+
+{% block js %}
+<script>
+    window.fbAsyncInit = function() {
+        FB.init({
+            appId: {{ fb_app_id }},
+            status: true,
+            cookie: true,
+            xfbml: true
+        });
+
+        FB.Event.subscribe('auth.authResponseChange', function(response) {
+            if(response.status === 'connected') {
+                // They are connected.
+            } else if (response.status === 'not_authorized') {
+                // They are not authorized the app, but they are logged into FB
+            } else {
+                // Not logged into Facebook
+
+            }
+        });
+    };
+
+(function(d){
+   var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+   if (d.getElementById(id)) {return;}
+   js = d.createElement('script'); js.id = id; js.async = true;
+   js.src = "//connect.facebook.net/en_US/all.js";
+   ref.parentNode.insertBefore(js, ref);
+  }(document));
+
+</script>
 {% endblock %}
